[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Francesco Gadaleta <francesco@amethix.com"]
description = "Simple histograms with configurable floating point buckets and floating point samples "
documentation = "https://docs.rs/histo"
keywords = ["histogram", "stddev", "mean"]
license = "Apache-2.0/MIT"
name = "histo"
repository = "https://github.com/fgadaleta/histo"
version = "0.2.0"

[badges]
travis-ci = { repository = "fgadaleta/histo" }

[[bin]]
name = "histo"
doc = false

[dependencies]
streaming-stats = "0.1.28"
rand = "0.7"

[dependencies.quickcheck]
optional = true
version = "0.4.1"