[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Francesco Gadaleta <francesco@amethix.com"]
description = "Simple histograms with configurable floating point buckets and floating point samples "
documentation = "https://docs.rs/histo"
keywords = ["histogram", "stddev", "mean"]
license = "Apache-2.0/MIT"
name = "histo_fp"
repository = "https://github.com/fgadaleta/histo_fp"
version = "0.2.1"
edition = "2018"

[badges]
travis-ci = { repository = "fgadaleta/histo_fp" }

[[bin]]
name = "histo_fp"
doc = false

[dependencies]
streaming-stats = "0.1.28"
rand = "0.7"
noisy_float = "0.1.12"

[dependencies.quickcheck]
optional = true
version = "0.4.1"
